Update esports data dashboard and admin tools